testsuite/tests/ghc-regress/typecheck/should_fail/tcfail200.hs
{-# OPTIONS -fglasgow-exts #-}

module ShouldFail where

f = let x = ( 1#, 'c' ) in x
